# app/api/transactionView.py
@@ -14,10 +14,24 @@ class TransactionView(SuperView):
 
     def post(self):
       body = request.json
-      return self.insert(body)
+      fromId = body.pop('fromId')
+      toId = body.pop('toId')
+      with self.transaction() as session:
+        with session.start_transaction():
+          user_resp = self.retrieve(fromId,'user')[0]
+          ngo_resp = self.retrieve(toId,'ngo')[0]
+          body['from'] = { "name": user_resp['firstName'] + user_resp['lastName'], "email": user_resp['email'] }
+          body['to'] = { "name": ngo_resp['name'], "email": ngo_resp['email']}
+          self.insert_subdocument_array(fromId,body,'user','transaction')
+          self.insert_subdocument_array(toId,body,'ngo','transaction')
+          return self.insert(body)
 
     def delete(self, transcationId):
-      return self.remove(transcationId)
+      with self.getTransaction() as session:
+        with session.start_transaction():
+          self.remove_subdocument_array(transcationId, 'user')
+          self.insert_subdocument_array(transcationId, 'ngo')
+          return self.remove(transcationId)
 
     def get(self, transcationId):
       return self.retrieve(transcationId)
