# app/openapi/ngoapi.yml
@@ -464,3 +464,32 @@ ngo/{ngoId}/requirements:
             application/json:
               schema:
                 $ref: "./schemas.yml#/schemas/Error"
+
+ngo/{ngoId}/transaction:
+    get:
+      summary: List all transaction
+      operationId: app.api.NgoTransactionView.getAll
+      tags:
+        - ngos
+      parameters:
+        - name: ngoId
+          in: path
+          required: true
+          description: The id of the user to update
+          schema:
+            type: string
+      responses:
+        '200':
+          description: An paged array of transaction
+          content:
+            application/json:
+              schema:
+                type: "array"
+                items:
+                    $ref: "./schemas.yml#/schemas/Transaction"
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "./schemas.yml#/schemas/Error"
